--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -63,9 +63,10 @@
     cursor: pointer;
 }
 
-@media screen and (max-width: 850px){
+@media screen and (max-width: 650px){
     .navbar{
         z-index: 99;
+        width: 95%;
     }
     .nav-menu{
         display: flex;
